fix clan text misalignment

--- a/dev/app/components/card-template/spell.css
+++ b/dev/app/components/card-template/spell.css
@@ -129,6 +129,7 @@
     will-change: font-size;
     width: 214px;
     text-align: center;
+    transform: translateY(4px);
 }
 
 .spell .rarity {
